--- a/templatemo_545_finance_business/assets/css/templatemo-finance-business.css
+++ b/templatemo_545_finance_business/assets/css/templatemo-finance-business.css
@@ -6,6 +6,9 @@ https://templatemo.com/tm-545-finance-business
 
 */
 
+html {
+	scroll-behavior: smooth;
+  }
 body {
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
