upto changing the facebook link

--- a/templatemo_545_finance_business/assets/css/templatemo-finance-business.css
+++ b/templatemo_545_finance_business/assets/css/templatemo-finance-business.css
@@ -389,15 +389,15 @@ header .navbar {
 }
 
 .Modern-Slider .item-1 .img-fill {
-	background-image: url(../images/slide_01.jpg);
+	background-image: url(../images/scroll/1.png);
 }
 
 .Modern-Slider .item-2 .img-fill {
-	background-image: url(../images/slide_02.jpg);
+	background-image: url(../images/scroll/2.png);
 }
 
 .Modern-Slider .item-3 .img-fill {
-	background-image: url(../images/slide_03.jpg);
+	background-image: url(../images/scroll/3.png);
 }
 
 .Modern-Slider .NextArrow{
