--- a/templatemo_545_finance_business/assets/css/style.css
+++ b/templatemo_545_finance_business/assets/css/style.css
@@ -678,7 +678,7 @@ ul.slick-dots {
 
 .fun-facts {
 	margin-top: 140px;
-	background-image: url(../images/fun-facts-bg.jpg);
+	background-image: url(../images/scroll/1_bg.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
