--- a/templatemo_545_finance_business/assets/css/style.css
+++ b/templatemo_545_finance_business/assets/css/style.css
@@ -1362,18 +1362,6 @@ footer .contact-form button.filled-button:hover {
 }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
 #contactus .info {
 	width: 100%;
 	height: 100%;
@@ -1384,7 +1372,7 @@ footer .contact-form button.filled-button:hover {
 
 #contactus .info i {
 	font-size: 20px;
-	color: #7cc576;
+	color: #4c9b3e;
 	float: left;
 	width: 44px;
 	height: 44px;
@@ -1419,56 +1407,9 @@ footer .contact-form button.filled-button:hover {
 #contactus .info .email:hover i,
 #contactus .info .address:hover i,
 #contactus .info .phone:hover i {
-	background: #7cc576;
+	background: #4c9b3e;
 	color: #fff;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -1615,4 +1556,45 @@ footer .contact-form button.filled-button:hover {
 	bottom: 100px;
 	right: 30px;
 	display: none;
-  }
+}
+
+.cards {
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+}
+
+/* .cards .red {
+	background-color: #f43f5e;
+}
+
+.cards .blue {
+	background-color: #3b82f6;
+} */
+
+.cards .green {
+	background-color: #4c9b3e;
+}
+
+.cards .card {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	text-align: center;
+	height: 40px;
+	width: 250px;
+	border-radius: 10px;
+	color: white;
+	cursor: pointer;
+	transition: 400ms;
+}
+
+.cards .card:hover {
+	transform: scale(1.1, 1.1);
+}
+
+.cards:hover>.card:not(:hover) {
+	filter: blur(2px);
+	transform: scale(0.9, 0.9);
+}
