--- a/templatemo_545_finance_business/assets/css/style.css
+++ b/templatemo_545_finance_business/assets/css/style.css
@@ -645,20 +645,26 @@ ul.slick-dots {
 
 
 
+
+
 /* Services */
 
 .services {
-	margin-top: 140px;
+	margin-top: 90px;
 }
 
 .service-item img {
 	width: 100%;
 	overflow: hidden;
+	border-top-left-radius: 5%;
+	border-top-right-radius: 5%;
 }
 
 .service-item .down-content {
 	background-color: #f7f7f7;
 	padding: 30px;
+	border-bottom-left-radius: 5%;
+	border-bottom-right-radius: 5%;
 }
 
 .service-item .down-content h4 {
@@ -677,7 +683,7 @@ ul.slick-dots {
 /* Fun Facts */
 
 .fun-facts {
-	margin-top: 140px;
+	margin-top: 90px;
 	background-image: url(../images/scroll/1_bg.png);
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -742,7 +748,7 @@ ul.slick-dots {
 /* More Info */
 
 .more-info {
-	margin-top: 140px;
+	margin-top: 90px;
 }
 
 .more-info .left-image img {
@@ -764,7 +770,7 @@ ul.slick-dots {
 }
 
 .more-info .right-content {
-	padding: 45px 45px 45px 30px;
+	padding: 45px 45px 45px 0px;
 }
 
 .more-info .right-content span {
@@ -791,6 +797,23 @@ ul.slick-dots {
 	margin-bottom: 30px;
 }
 
+/* Letters from chairman and spokesperson */
+#chairman_letter {
+	color: #000;
+	line-height: 1.6;
+	text-align: justify;
+	text-justify: inter-word;
+}
+#pills-tab .nav-link {
+    background-color: #d3d3d3; 
+    color: #000000; 
+    text-decoration: none; 
+}
+#pills-tab .nav-link.active {
+    background-color: #4c9b3e; 
+    color: white; 
+}
+
 
 /* Testimonials Style */
 
@@ -799,7 +822,7 @@ ul.slick-dots {
 }
 
 .testimonials {
-	margin-top: 140px;
+	margin-top: 90px;
 	background-color: #f7f7f7;
 	padding: 140px 0px;
 }
@@ -859,7 +882,7 @@ ul.slick-dots {
 }
 
 .callback-form {
-	margin-top: 140px;
+	margin-top: 90px;
 }
 
 .callback-form .contact-form {
@@ -977,7 +1000,7 @@ ul.slick-dots {
 }
 
 .partners {
-	margin-top: 140px;
+	margin-top: 90px;
 	background-color: #f7f7f7;
 	padding: 60px 0px;
 }
@@ -1209,7 +1232,7 @@ footer .contact-form button.filled-button:hover {
 
 .team {
 	background-color: #f7f7f7;
-	margin-top: 140px;
+	margin-top: 90px;
 	margin-bottom: -140px;
 	padding: 120px 0px;
 }
@@ -1247,7 +1270,7 @@ footer .contact-form button.filled-button:hover {
 /* Single Service */
 
 .single-services {
-	margin-top: 140px;
+	margin-top: 90px;
 }
 
 #tabs ul {
@@ -1329,7 +1352,7 @@ footer .contact-form button.filled-button:hover {
 /* Contact Information */
 
 .contact-information {
-	margin-top: 140px;
+	margin-top: 90px;
 }
 
 .contact-information .contact-item {
@@ -1581,7 +1604,7 @@ footer .contact-form button.filled-button:hover {
 	right: 50%;
 	bottom: 50%;
 	transform: translate(50%, 50%);
-	transition: all 0.6s ease-in-out;
+	transition: all 2s ease;
 	font-weight: bold;
 	color: #fff;
 }
@@ -1609,7 +1632,8 @@ footer .contact-form button.filled-button:hover {
 	background: rgba(255, 255, 255, 0.389);
 	border-top: 2px solid rgb(255, 255, 255);
 	border-right: 1px solid white;
-	border-radius: 10% 13% 42% 0%/10% 12% 75% 0%;
+	/* border-radius: 10% 13% 14% 0%/10% 12% 17% 0%; */
+	border-top-right-radius: 30px;
 	box-shadow: rgba(100, 100, 111, 0.364) -7px 7px 29px 0px;
 	transform-origin: bottom left;
 	transition: all 1s ease-in-out;
@@ -1629,33 +1653,33 @@ footer .contact-form button.filled-button:hover {
 }
 
 .box1 {
-	width: 85%;
-	height: 85%;
-	bottom: -85%;
-	left: -85%;
+	width: 100%;
+	height: 100%;
+	bottom: -100%;
+	left: -100%;
 }
 
 .box2 {
-	width: 65%;
-	height: 65%;
-	bottom: -65%;
-	left: -65%;
+	width: 85%;
+	height: 76.66666%;
+	bottom: -80%;
+	left: -80%;
 	transition-delay: 0.2s;
 }
 
 .box3 {
-	width: 45%;
-	height: 45%;
-	bottom: -45%;
-	left: -45%;
+	width: 60%;
+	height: 53.333%;
+	bottom: -60%;
+	left: -60%;
 	transition-delay: 0.4s;
 }
 
 .box4 {
-	width: 25%;
-	height: 25%;
-	bottom: -25%;
-	left: -25%;
+	width: 50%;
+	height: 30%;
+	bottom: -40%;
+	left: -40%;
 	transition-delay: 0.6s;
 }
 
@@ -1669,7 +1693,8 @@ footer .contact-form button.filled-button:hover {
 }
 
 .main_card:hover .cool_card_logo {
-	transform: translate(0, 0);
+	transform: translate(500%, -500%);
+	transition: all 4s ease;
 	top: 20px;
 	left: 20px;
 }
@@ -1690,10 +1715,10 @@ footer .contact-form button.filled-button:hover {
 	box-shadow: 20px 20px 60px #bebebe, -20px -20px 60px #ffffff;
 	;
   } */
-  
-  
-  
-  .blob {
+
+
+
+.blob1 {
 	position: absolute;
 	z-index: 1;
 	top: 50%;
@@ -1701,30 +1726,72 @@ footer .contact-form button.filled-button:hover {
 	width: 100px;
 	height: 100px;
 	border-radius: 50%;
-	background-color: #ffffff;
+	background-color: white;
 	opacity: 1;
 	filter: blur(70px);
-	animation: blob-bounce 2s infinite ease;
-  }
-  
-  @keyframes blob-bounce {
+	animation: blob-bounce1 7s infinite linear;
+}
+
+.blob2 {
+	position: absolute;
+	z-index: 1;
+	top: 50%;
+	left: 50%;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	background-color: white;
+	opacity: 1;
+	filter: blur(70px);
+	animation: blob-bounce2 7s infinite linear;
+}
+
+@keyframes blob-bounce1 {
 	0% {
-	  transform: translate(-100%, -100%) translate3d(0, 0, 0);
+		transform: translate(-100%, -100%) translate3d(-120%, -70%, 0);
 	}
-  
+
 	25% {
-	  transform: translate(-100%, -100%) translate3d(100%, 0, 0);
+		transform: translate(-100%, -100%) translate3d(220%, -70%, 0);
 	}
-  
+
 	50% {
-	  transform: translate(-100%, -100%) translate3d(100%, 100%, 0);
+		transform: translate(-100%, -100%) translate3d(220%, 170%, 0);
 	}
-  
+
 	75% {
-	  transform: translate(-100%, -100%) translate3d(0, 100%, 0);
+		transform: translate(-100%, -100%) translate3d(-120%, 170%, 0);
 	}
-  
+
 	100% {
-	  transform: translate(-100%, -100%) translate3d(0, 0, 0);
+		transform: translate(-100%, -100%) translate3d(-120%, -70%, 0);
 	}
-  }
+}
+
+
+@keyframes blob-bounce2 {
+	0% {
+		transform: translate(-100%, -100%) translate3d(220%, 170%, 0);
+	}
+
+	25% {
+		transform: translate(-100%, -100%) translate3d(-120%, 170%, 0);
+	}
+
+	50% {
+		transform: translate(-100%, -100%) translate3d(-120%, -70%, 0);
+	}
+
+	75% {
+		transform: translate(-100%, -100%) translate3d(220%, -70%, 0);
+	}
+
+	100% {
+		transform: translate(-100%, -100%) translate3d(220%, 170%, 0);
+	}
+}
+
+
+
+
+
