inner pages design going on for services.

--- a/templatemo_545_finance_business/assets/css/style_inner.css
+++ b/templatemo_545_finance_business/assets/css/style_inner.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-	background-color: rgba(178, 178, 178, 0.126);
+	background-color: rgba(178, 178, 178, 0.378);
 	font-family: 'Poppins', sans-serif;
 	overflow-x: hidden;
 	text-rendering: optimizeLegibility;
@@ -821,184 +821,6 @@ ul.slick-dots {
 }
 
 
-/* Testimonials Style */
-
-.about-testimonials {
-	margin-top: 0px !important;
-}
-
-.testimonials {
-	margin-top: 90px;
-	background-color: #f7f7f7;
-	padding: 140px 0px;
-}
-
-.testimonial-item .inner-content {
-	text-align: center;
-	background-color: #fff;
-	padding: 30px;
-	border-radius: 5px;
-}
-
-.testimonial-item p {
-	font-size: 14px;
-	font-weight: 400;
-}
-
-.testimonial-item h4 {
-	font-size: 19px;
-	font-weight: 700;
-	color: #1e1e1e;
-	letter-spacing: 0.5px;
-	margin-bottom: 0px;
-}
-
-.testimonial-item span {
-	display: inline-block;
-	margin-top: 8px;
-	font-weight: 600;
-	font-size: 14px;
-	color: #4c9b3e;
-}
-
-.testimonial-item img {
-	max-width: 60px;
-	border-radius: 50%;
-	margin: 25px auto 0px auto;
-}
-
-
-
-
-/* Call Back Style */
-
-.callback-services {
-	border-top: 1px solid #eee;
-	padding-top: 140px;
-}
-
-.contact-us {
-	background-color: #f7f7f7;
-	padding: 140px 0px;
-}
-
-.contact-us .contact-form {
-	background-color: transparent !important;
-	padding: 0 !important;
-}
-
-.callback-form {
-	margin-top: 90px;
-}
-
-.callback-form .contact-form {
-	background-color: #4c9b3e;
-	padding: 60px;
-	border-radius: 5px;
-	text-align: center;
-}
-
-.callback-form .contact-form input {
-	border-radius: 20px;
-	height: 40px;
-	line-height: 40px;
-	display: inline-block;
-	padding: 0px 15px;
-	color: #6a6a6a;
-	font-size: 13px;
-	text-transform: none;
-	box-shadow: none;
-	border: none;
-	margin-bottom: 35px;
-}
-
-.callback-form .contact-form input:focus {
-	outline: none;
-	box-shadow: none;
-	border: none;
-}
-
-.callback-form .contact-form textarea {
-	border-radius: 20px;
-	height: 120px;
-	max-height: 200px;
-	min-height: 120px;
-	display: inline-block;
-	padding: 15px;
-	color: #6a6a6a;
-	font-size: 13px;
-	text-transform: none;
-	box-shadow: none;
-	border: none;
-	margin-bottom: 35px;
-}
-
-.callback-form .contact-form textarea:focus {
-	outline: none;
-	box-shadow: none;
-	border: none;
-}
-
-.callback-form .contact-form ::-webkit-input-placeholder {
-	/* Edge */
-	color: #aaa;
-}
-
-.callback-form .contact-form :-ms-input-placeholder {
-	/* Internet Explorer 10-11 */
-	color: #aaa;
-}
-
-.callback-form .contact-form ::placeholder {
-	color: #aaa;
-}
-
-.callback-form .contact-form button.border-button {
-	background-color: transparent;
-	color: #fff;
-	border: 2px solid #fff;
-	font-size: 13px;
-	text-transform: uppercase;
-	font-weight: 700;
-	padding: 10px 28px;
-	border-radius: 30px;
-	display: inline-block;
-	transition: all 0.3s;
-	outline: none;
-	box-shadow: none;
-	text-shadow: none;
-	cursor: pointer;
-}
-
-.callback-form .contact-form button.border-button:hover {
-	background-color: #fff;
-	color: #4c9b3e;
-}
-
-.contact-us .contact-form button.filled-button {
-	background-color: #4c9b3e;
-	color: #fff;
-	border: none;
-	font-size: 13px;
-	text-transform: uppercase;
-	font-weight: 700;
-	padding: 12px 30px;
-	border-radius: 30px;
-	display: inline-block;
-	transition: all 0.3s;
-	outline: none;
-	box-shadow: none;
-	text-shadow: none;
-	cursor: pointer;
-}
-
-.contact-us .contact-form button.filled-button:hover {
-	background-color: #fff;
-	color: #4c9b3e;
-}
-
-
-
 /* Partners Style */
 
 .contact-partners {
@@ -1036,6 +858,73 @@ ul.slick-dots {
 		transform: translateX(calc(-570px * 6));
 	}
 }
+
+
+
+.input {
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	/* background-color: #212529; */
+	justify-content: center;
+	border-radius: 5px
+}
+
+.value {
+	font-style: normal;
+	/* background-color: transparent; */
+	/* border: none; */
+	padding: 10px;
+	color: white;
+	display: flex;
+	position: relative;
+	gap: 5px;
+	cursor: pointer;
+	border-radius: 4px;
+	text-decoration: none;
+}
+
+.value button{
+	border:none;
+	background-color: #00000000;
+}
+
+.value:not(:active):hover,
+.value:focus {
+	background-color: #4c9b3e;
+}
+
+.value:focus,
+.value:active {
+	background-color: #a9a9a9;
+	outline: none;
+}
+
+.value::before {
+	content: "";
+	position: absolute;
+	top: 5px;
+	left: -10px;
+	width: 5px;
+	height: 80%;
+	background-color: #4c9b3e;
+	border-radius: 5px;
+	opacity: 0;
+}
+
+.value:focus::before,
+.value:active::before {
+	opacity: 1;
+}
+
+
+.input:hover> :not(.value:hover) {
+	transition: .4s ease;
+	filter: blur(0.5px);
+	transform: scale(0.95, 0.95);
+}
+
+
 
 /* Footer Style */
 
@@ -1276,9 +1165,9 @@ footer .contact-form button.filled-button:hover {
 /* Single Service */
 
 .single-services {
-	margin-top: 90px;
+	margin-top: 20px;
 }
-
+/* 
 #tabs ul {
 	margin: 0;
 	padding: 0;
@@ -1325,7 +1214,7 @@ footer .contact-form button.filled-button:hover {
 
 #tabs ul .ui-tabs-active span {
 	color: #1e1e1e;
-}
+} */
 
 .tabs-content {
 	margin-left: 30px;
