images in services site framing done

--- a/templatemo_545_finance_business/assets/css/style_inner.css
+++ b/templatemo_545_finance_business/assets/css/style_inner.css
@@ -370,6 +370,23 @@ header .navbar {
 	color: white;
 }
 
+#myTabContent .img-services{
+	margin-top: 30px;
+	margin-right: 10px;
+	height: 55%;
+	width: 55%;
+	object-fit: contain;
+	float: left;
+	border-radius: 7%;
+	border-style:ridge;
+	box-shadow: #000000;
+}
+#myTabContent .service-info{
+	margin-top: 30px;
+	margin-left: 20px;
+	text-align: justify;
+}
+
 /* Banner Style */
 
 .img-fill {
